--- a/DB/.classpath
+++ b/DB/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="D:/Workspace/Java/mysql-connector-java-5.1.16/mysql-connector-java-5.1.16-bin.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/DBMI"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
